--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,21 @@
 Github:
 
 <ahref="https://mwanderr.github.io/GameDev2022-Milan/public/">https://mwanderr.github.io/GameDev2022-Milan//>/a>
+
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+ <li><a href="https://mwanderr.github.io/GameDev2022-Milan/">https://mwanderr.github.io/GameDev2022-Milan/</a>
+ <li><a href="https://mwanderr.github.io/GameDev2022-Milan/">https://mwanderr.github.io/GameDev2022-Milan/</a>
+ <li><a href="https://mwanderr.github.io/GameDev2022-Milan/">https://mwanderr.github.io/GameDev2022-Milan/</a> 
+ <li><a href="https://mwanderr.github.io/GameDev2022-Milan/">https://mwanderr.github.io/GameDev2022-Milan/</a> 
+ <li><a href="https://mwanderr.github.io/GameDev2022-Milan/">https://mwanderr.github.io/GameDev2022-Milan/</a> 
+ <li><a href="https://mwanderr.github.io/GameDev2022-Milan/">https://mwanderr.github.io/GameDev2022-Milan/</a>
