--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 Github:
 
-<ahref="https://mwanderr.github.io/GameDev2022-Milan/public/">https://mwanderr.github.io/GameDev2022-Milan//>/a>
+<h1 algin=center>index.html for Game Dev by Milan <h1>
 
   
-  
-  
+ <li><a href="..">my github repository full url</a>  
+ <li><a href="https://mwanderr.github.io/GameDev2022-Milan/">my game dev website full url</a>  
   
   
   
