--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@ Github:
 <h1 algin=center>index.html for Game Dev by Milan <h1>
 
   
- <li><a href="..">my github repository full url</a>  
+ <li><a href="https://github.com/mwanderr/GameDev2022-Milan">my github repository full url</a>  
  <li><a href="https://mwanderr.github.io/GameDev2022-Milan/">my game dev website full url</a>  
   
   
