--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@ Github:
 <h1 algin=center>index.html for Game Dev by Milan <h1>
 
   
- <li><a href="https://github.com/mwanderr/GameDev2022-Milan">my github repository full url</a>  
- <li><a href="https://mwanderr.github.io/GameDev2022-Milan/">my game dev website full url</a>  
+<a href="https://github.com/mwanderr/GameDev2022-Milan">Github Repo</a>  
+<a href="https://mwanderr.github.io/GameDev2022-Milan/">Index</a>  
   
   
   
